[project]
name = "dotfiles"
version = "1.0.0"
description = ""
authors = [{name = "Bruno Semperlotti", email = "7171722+bsemp@users.noreply.github.com"}]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "ansible==12.0.0",
]

[tool.uv]
environments = ["platform_system == 'Darwin'"]

[dependency-groups]
dev = [
    "ansible-lint==25.9.1",
]
