[project]
name = "dotfiles"
version = "1.0.0"
description = ""
authors = [{name = "Bruno Semperlotti", email = "7171722+bsemp@users.noreply.github.com"}]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "ansible==13.6.0",
]

[tool.uv]
environments = ["platform_system == 'Darwin'"]

[dependency-groups]
dev = [
    "ansible-lint==26.4.0",
]
